src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    DOT
    LBRACE
    LBRACKET
    RBRACE
    RBRACKET
    REG
    TIMES

Grammar

Rule 0     S' -> module_definition
Rule 1     module_definition -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE
Rule 2     port_list -> port_list_items
Rule 3     port_list_items -> ID
Rule 4     port_list_items -> port_list_items COMMA ID
Rule 5     port_list_items -> WIRE ID
Rule 6     port_list_items -> port_list_items COMMA WIRE ID
Rule 7     module_items -> module_item
Rule 8     module_items -> module_items module_item
Rule 9     module_items -> empty
Rule 10    module_item -> input_declaration
Rule 11    module_item -> output_declaration
Rule 12    module_item -> wire_declaration
Rule 13    module_item -> assign_statement
Rule 14    module_item -> gate_instantiation
Rule 15    input_declaration -> INPUT input_list SEMICOLON
Rule 16    input_declaration -> INPUT WIRE input_list SEMICOLON
Rule 17    input_list -> ID
Rule 18    input_list -> input_list COMMA ID
Rule 19    output_declaration -> OUTPUT ID SEMICOLON
Rule 20    wire_declaration -> WIRE wire_list SEMICOLON
Rule 21    wire_list -> ID
Rule 22    wire_list -> wire_list COMMA ID
Rule 23    assign_statement -> ASSIGN ID EQUALS expression SEMICOLON
Rule 24    expression -> term
Rule 25    expression -> expression PLUS term
Rule 26    expression -> expression MINUS term
Rule 27    expression -> expression AMPERSAND term
Rule 28    expression -> expression BAR term
Rule 29    expression -> expression CARET term
Rule 30    expression -> term QUESTION expression COLON expression
Rule 31    term -> ID
Rule 32    term -> NUMBER
Rule 33    term -> LPAREN expression RPAREN
Rule 34    term -> TILDE term
Rule 35    empty -> <empty>
Rule 36    gate_instantiation -> gate_type ID LPAREN signal_list RPAREN SEMICOLON
Rule 37    gate_type -> AND
Rule 38    gate_type -> OR
Rule 39    gate_type -> NOT
Rule 40    gate_type -> NAND
Rule 41    gate_type -> NOR
Rule 42    gate_type -> XOR
Rule 43    gate_type -> XNOR
Rule 44    gate_type -> BUF
Rule 45    signal_list -> ID
Rule 46    signal_list -> signal_list COMMA ID

Terminals, with rules where they appear

AMPERSAND            : 27
AND                  : 37
ASSIGN               : 23
BAR                  : 28
BUF                  : 44
CARET                : 29
COLON                : 30
COMMA                : 4 6 18 22 46
DIVIDE               : 
DOT                  : 
ENDMODULE            : 1
EQUALS               : 23
ID                   : 1 3 4 5 6 17 18 19 21 22 23 31 36 45 46
INPUT                : 15 16
LBRACE               : 
LBRACKET             : 
LPAREN               : 1 33 36
MINUS                : 26
MODULE               : 1
NAND                 : 40
NOR                  : 41
NOT                  : 39
NUMBER               : 32
OR                   : 38
OUTPUT               : 19
PLUS                 : 25
QUESTION             : 30
RBRACE               : 
RBRACKET             : 
REG                  : 
RPAREN               : 1 33 36
SEMICOLON            : 1 15 16 19 20 23 36
TILDE                : 34
TIMES                : 
WIRE                 : 5 6 16 20
XNOR                 : 43
XOR                  : 42
error                : 

Nonterminals, with rules where they appear

assign_statement     : 13
empty                : 9
expression           : 23 25 26 27 28 29 30 30 33
gate_instantiation   : 14
gate_type            : 36
input_declaration    : 10
input_list           : 15 16 18
module_definition    : 0
module_item          : 7 8
module_items         : 1 8
output_declaration   : 11
port_list            : 1
port_list_items      : 2 4 6
signal_list          : 36 46
term                 : 24 25 26 27 28 29 30 34
wire_declaration     : 12
wire_list            : 20 22

Parsing method: LALR

state 0

    (0) S' -> . module_definition
    (1) module_definition -> . MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE

    MODULE          shift and go to state 2

    module_definition              shift and go to state 1

state 1

    (0) S' -> module_definition .



state 2

    (1) module_definition -> MODULE . ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE

    ID              shift and go to state 3


state 3

    (1) module_definition -> MODULE ID . LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE

    LPAREN          shift and go to state 4


state 4

    (1) module_definition -> MODULE ID LPAREN . port_list RPAREN SEMICOLON module_items ENDMODULE
    (2) port_list -> . port_list_items
    (3) port_list_items -> . ID
    (4) port_list_items -> . port_list_items COMMA ID
    (5) port_list_items -> . WIRE ID
    (6) port_list_items -> . port_list_items COMMA WIRE ID

    ID              shift and go to state 5
    WIRE            shift and go to state 8

    port_list                      shift and go to state 6
    port_list_items                shift and go to state 7

state 5

    (3) port_list_items -> ID .

    COMMA           reduce using rule 3 (port_list_items -> ID .)
    RPAREN          reduce using rule 3 (port_list_items -> ID .)


state 6

    (1) module_definition -> MODULE ID LPAREN port_list . RPAREN SEMICOLON module_items ENDMODULE

    RPAREN          shift and go to state 9


state 7

    (2) port_list -> port_list_items .
    (4) port_list_items -> port_list_items . COMMA ID
    (6) port_list_items -> port_list_items . COMMA WIRE ID

    RPAREN          reduce using rule 2 (port_list -> port_list_items .)
    COMMA           shift and go to state 10


state 8

    (5) port_list_items -> WIRE . ID

    ID              shift and go to state 11


state 9

    (1) module_definition -> MODULE ID LPAREN port_list RPAREN . SEMICOLON module_items ENDMODULE

    SEMICOLON       shift and go to state 12


state 10

    (4) port_list_items -> port_list_items COMMA . ID
    (6) port_list_items -> port_list_items COMMA . WIRE ID

    ID              shift and go to state 13
    WIRE            shift and go to state 14


state 11

    (5) port_list_items -> WIRE ID .

    COMMA           reduce using rule 5 (port_list_items -> WIRE ID .)
    RPAREN          reduce using rule 5 (port_list_items -> WIRE ID .)


state 12

    (1) module_definition -> MODULE ID LPAREN port_list RPAREN SEMICOLON . module_items ENDMODULE
    (7) module_items -> . module_item
    (8) module_items -> . module_items module_item
    (9) module_items -> . empty
    (10) module_item -> . input_declaration
    (11) module_item -> . output_declaration
    (12) module_item -> . wire_declaration
    (13) module_item -> . assign_statement
    (14) module_item -> . gate_instantiation
    (35) empty -> .
    (15) input_declaration -> . INPUT input_list SEMICOLON
    (16) input_declaration -> . INPUT WIRE input_list SEMICOLON
    (19) output_declaration -> . OUTPUT ID SEMICOLON
    (20) wire_declaration -> . WIRE wire_list SEMICOLON
    (23) assign_statement -> . ASSIGN ID EQUALS expression SEMICOLON
    (36) gate_instantiation -> . gate_type ID LPAREN signal_list RPAREN SEMICOLON
    (37) gate_type -> . AND
    (38) gate_type -> . OR
    (39) gate_type -> . NOT
    (40) gate_type -> . NAND
    (41) gate_type -> . NOR
    (42) gate_type -> . XOR
    (43) gate_type -> . XNOR
    (44) gate_type -> . BUF

  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for OUTPUT resolved as shift
  ! shift/reduce conflict for WIRE resolved as shift
  ! shift/reduce conflict for ASSIGN resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NAND resolved as shift
  ! shift/reduce conflict for NOR resolved as shift
  ! shift/reduce conflict for XOR resolved as shift
  ! shift/reduce conflict for XNOR resolved as shift
  ! shift/reduce conflict for BUF resolved as shift
    ENDMODULE       reduce using rule 35 (empty -> .)
    INPUT           shift and go to state 23
    OUTPUT          shift and go to state 25
    WIRE            shift and go to state 24
    ASSIGN          shift and go to state 26
    AND             shift and go to state 28
    OR              shift and go to state 29
    NOT             shift and go to state 30
    NAND            shift and go to state 31
    NOR             shift and go to state 32
    XOR             shift and go to state 33
    XNOR            shift and go to state 34
    BUF             shift and go to state 35

  ! INPUT           [ reduce using rule 35 (empty -> .) ]
  ! OUTPUT          [ reduce using rule 35 (empty -> .) ]
  ! WIRE            [ reduce using rule 35 (empty -> .) ]
  ! ASSIGN          [ reduce using rule 35 (empty -> .) ]
  ! AND             [ reduce using rule 35 (empty -> .) ]
  ! OR              [ reduce using rule 35 (empty -> .) ]
  ! NOT             [ reduce using rule 35 (empty -> .) ]
  ! NAND            [ reduce using rule 35 (empty -> .) ]
  ! NOR             [ reduce using rule 35 (empty -> .) ]
  ! XOR             [ reduce using rule 35 (empty -> .) ]
  ! XNOR            [ reduce using rule 35 (empty -> .) ]
  ! BUF             [ reduce using rule 35 (empty -> .) ]

    module_items                   shift and go to state 15
    module_item                    shift and go to state 16
    empty                          shift and go to state 17
    input_declaration              shift and go to state 18
    output_declaration             shift and go to state 19
    wire_declaration               shift and go to state 20
    assign_statement               shift and go to state 21
    gate_instantiation             shift and go to state 22
    gate_type                      shift and go to state 27

state 13

    (4) port_list_items -> port_list_items COMMA ID .

    COMMA           reduce using rule 4 (port_list_items -> port_list_items COMMA ID .)
    RPAREN          reduce using rule 4 (port_list_items -> port_list_items COMMA ID .)


state 14

    (6) port_list_items -> port_list_items COMMA WIRE . ID

    ID              shift and go to state 36


state 15

    (1) module_definition -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items . ENDMODULE
    (8) module_items -> module_items . module_item
    (10) module_item -> . input_declaration
    (11) module_item -> . output_declaration
    (12) module_item -> . wire_declaration
    (13) module_item -> . assign_statement
    (14) module_item -> . gate_instantiation
    (15) input_declaration -> . INPUT input_list SEMICOLON
    (16) input_declaration -> . INPUT WIRE input_list SEMICOLON
    (19) output_declaration -> . OUTPUT ID SEMICOLON
    (20) wire_declaration -> . WIRE wire_list SEMICOLON
    (23) assign_statement -> . ASSIGN ID EQUALS expression SEMICOLON
    (36) gate_instantiation -> . gate_type ID LPAREN signal_list RPAREN SEMICOLON
    (37) gate_type -> . AND
    (38) gate_type -> . OR
    (39) gate_type -> . NOT
    (40) gate_type -> . NAND
    (41) gate_type -> . NOR
    (42) gate_type -> . XOR
    (43) gate_type -> . XNOR
    (44) gate_type -> . BUF

    ENDMODULE       shift and go to state 37
    INPUT           shift and go to state 23
    OUTPUT          shift and go to state 25
    WIRE            shift and go to state 24
    ASSIGN          shift and go to state 26
    AND             shift and go to state 28
    OR              shift and go to state 29
    NOT             shift and go to state 30
    NAND            shift and go to state 31
    NOR             shift and go to state 32
    XOR             shift and go to state 33
    XNOR            shift and go to state 34
    BUF             shift and go to state 35

    module_item                    shift and go to state 38
    input_declaration              shift and go to state 18
    output_declaration             shift and go to state 19
    wire_declaration               shift and go to state 20
    assign_statement               shift and go to state 21
    gate_instantiation             shift and go to state 22
    gate_type                      shift and go to state 27

state 16

    (7) module_items -> module_item .

    ENDMODULE       reduce using rule 7 (module_items -> module_item .)
    INPUT           reduce using rule 7 (module_items -> module_item .)
    OUTPUT          reduce using rule 7 (module_items -> module_item .)
    WIRE            reduce using rule 7 (module_items -> module_item .)
    ASSIGN          reduce using rule 7 (module_items -> module_item .)
    AND             reduce using rule 7 (module_items -> module_item .)
    OR              reduce using rule 7 (module_items -> module_item .)
    NOT             reduce using rule 7 (module_items -> module_item .)
    NAND            reduce using rule 7 (module_items -> module_item .)
    NOR             reduce using rule 7 (module_items -> module_item .)
    XOR             reduce using rule 7 (module_items -> module_item .)
    XNOR            reduce using rule 7 (module_items -> module_item .)
    BUF             reduce using rule 7 (module_items -> module_item .)


state 17

    (9) module_items -> empty .

    ENDMODULE       reduce using rule 9 (module_items -> empty .)
    INPUT           reduce using rule 9 (module_items -> empty .)
    OUTPUT          reduce using rule 9 (module_items -> empty .)
    WIRE            reduce using rule 9 (module_items -> empty .)
    ASSIGN          reduce using rule 9 (module_items -> empty .)
    AND             reduce using rule 9 (module_items -> empty .)
    OR              reduce using rule 9 (module_items -> empty .)
    NOT             reduce using rule 9 (module_items -> empty .)
    NAND            reduce using rule 9 (module_items -> empty .)
    NOR             reduce using rule 9 (module_items -> empty .)
    XOR             reduce using rule 9 (module_items -> empty .)
    XNOR            reduce using rule 9 (module_items -> empty .)
    BUF             reduce using rule 9 (module_items -> empty .)


state 18

    (10) module_item -> input_declaration .

    ENDMODULE       reduce using rule 10 (module_item -> input_declaration .)
    INPUT           reduce using rule 10 (module_item -> input_declaration .)
    OUTPUT          reduce using rule 10 (module_item -> input_declaration .)
    WIRE            reduce using rule 10 (module_item -> input_declaration .)
    ASSIGN          reduce using rule 10 (module_item -> input_declaration .)
    AND             reduce using rule 10 (module_item -> input_declaration .)
    OR              reduce using rule 10 (module_item -> input_declaration .)
    NOT             reduce using rule 10 (module_item -> input_declaration .)
    NAND            reduce using rule 10 (module_item -> input_declaration .)
    NOR             reduce using rule 10 (module_item -> input_declaration .)
    XOR             reduce using rule 10 (module_item -> input_declaration .)
    XNOR            reduce using rule 10 (module_item -> input_declaration .)
    BUF             reduce using rule 10 (module_item -> input_declaration .)


state 19

    (11) module_item -> output_declaration .

    ENDMODULE       reduce using rule 11 (module_item -> output_declaration .)
    INPUT           reduce using rule 11 (module_item -> output_declaration .)
    OUTPUT          reduce using rule 11 (module_item -> output_declaration .)
    WIRE            reduce using rule 11 (module_item -> output_declaration .)
    ASSIGN          reduce using rule 11 (module_item -> output_declaration .)
    AND             reduce using rule 11 (module_item -> output_declaration .)
    OR              reduce using rule 11 (module_item -> output_declaration .)
    NOT             reduce using rule 11 (module_item -> output_declaration .)
    NAND            reduce using rule 11 (module_item -> output_declaration .)
    NOR             reduce using rule 11 (module_item -> output_declaration .)
    XOR             reduce using rule 11 (module_item -> output_declaration .)
    XNOR            reduce using rule 11 (module_item -> output_declaration .)
    BUF             reduce using rule 11 (module_item -> output_declaration .)


state 20

    (12) module_item -> wire_declaration .

    ENDMODULE       reduce using rule 12 (module_item -> wire_declaration .)
    INPUT           reduce using rule 12 (module_item -> wire_declaration .)
    OUTPUT          reduce using rule 12 (module_item -> wire_declaration .)
    WIRE            reduce using rule 12 (module_item -> wire_declaration .)
    ASSIGN          reduce using rule 12 (module_item -> wire_declaration .)
    AND             reduce using rule 12 (module_item -> wire_declaration .)
    OR              reduce using rule 12 (module_item -> wire_declaration .)
    NOT             reduce using rule 12 (module_item -> wire_declaration .)
    NAND            reduce using rule 12 (module_item -> wire_declaration .)
    NOR             reduce using rule 12 (module_item -> wire_declaration .)
    XOR             reduce using rule 12 (module_item -> wire_declaration .)
    XNOR            reduce using rule 12 (module_item -> wire_declaration .)
    BUF             reduce using rule 12 (module_item -> wire_declaration .)


state 21

    (13) module_item -> assign_statement .

    ENDMODULE       reduce using rule 13 (module_item -> assign_statement .)
    INPUT           reduce using rule 13 (module_item -> assign_statement .)
    OUTPUT          reduce using rule 13 (module_item -> assign_statement .)
    WIRE            reduce using rule 13 (module_item -> assign_statement .)
    ASSIGN          reduce using rule 13 (module_item -> assign_statement .)
    AND             reduce using rule 13 (module_item -> assign_statement .)
    OR              reduce using rule 13 (module_item -> assign_statement .)
    NOT             reduce using rule 13 (module_item -> assign_statement .)
    NAND            reduce using rule 13 (module_item -> assign_statement .)
    NOR             reduce using rule 13 (module_item -> assign_statement .)
    XOR             reduce using rule 13 (module_item -> assign_statement .)
    XNOR            reduce using rule 13 (module_item -> assign_statement .)
    BUF             reduce using rule 13 (module_item -> assign_statement .)


state 22

    (14) module_item -> gate_instantiation .

    ENDMODULE       reduce using rule 14 (module_item -> gate_instantiation .)
    INPUT           reduce using rule 14 (module_item -> gate_instantiation .)
    OUTPUT          reduce using rule 14 (module_item -> gate_instantiation .)
    WIRE            reduce using rule 14 (module_item -> gate_instantiation .)
    ASSIGN          reduce using rule 14 (module_item -> gate_instantiation .)
    AND             reduce using rule 14 (module_item -> gate_instantiation .)
    OR              reduce using rule 14 (module_item -> gate_instantiation .)
    NOT             reduce using rule 14 (module_item -> gate_instantiation .)
    NAND            reduce using rule 14 (module_item -> gate_instantiation .)
    NOR             reduce using rule 14 (module_item -> gate_instantiation .)
    XOR             reduce using rule 14 (module_item -> gate_instantiation .)
    XNOR            reduce using rule 14 (module_item -> gate_instantiation .)
    BUF             reduce using rule 14 (module_item -> gate_instantiation .)


state 23

    (15) input_declaration -> INPUT . input_list SEMICOLON
    (16) input_declaration -> INPUT . WIRE input_list SEMICOLON
    (17) input_list -> . ID
    (18) input_list -> . input_list COMMA ID

    WIRE            shift and go to state 40
    ID              shift and go to state 41

    input_list                     shift and go to state 39

state 24

    (20) wire_declaration -> WIRE . wire_list SEMICOLON
    (21) wire_list -> . ID
    (22) wire_list -> . wire_list COMMA ID

    ID              shift and go to state 43

    wire_list                      shift and go to state 42

state 25

    (19) output_declaration -> OUTPUT . ID SEMICOLON

    ID              shift and go to state 44


state 26

    (23) assign_statement -> ASSIGN . ID EQUALS expression SEMICOLON

    ID              shift and go to state 45


state 27

    (36) gate_instantiation -> gate_type . ID LPAREN signal_list RPAREN SEMICOLON

    ID              shift and go to state 46


state 28

    (37) gate_type -> AND .

    ID              reduce using rule 37 (gate_type -> AND .)


state 29

    (38) gate_type -> OR .

    ID              reduce using rule 38 (gate_type -> OR .)


state 30

    (39) gate_type -> NOT .

    ID              reduce using rule 39 (gate_type -> NOT .)


state 31

    (40) gate_type -> NAND .

    ID              reduce using rule 40 (gate_type -> NAND .)


state 32

    (41) gate_type -> NOR .

    ID              reduce using rule 41 (gate_type -> NOR .)


state 33

    (42) gate_type -> XOR .

    ID              reduce using rule 42 (gate_type -> XOR .)


state 34

    (43) gate_type -> XNOR .

    ID              reduce using rule 43 (gate_type -> XNOR .)


state 35

    (44) gate_type -> BUF .

    ID              reduce using rule 44 (gate_type -> BUF .)


state 36

    (6) port_list_items -> port_list_items COMMA WIRE ID .

    COMMA           reduce using rule 6 (port_list_items -> port_list_items COMMA WIRE ID .)
    RPAREN          reduce using rule 6 (port_list_items -> port_list_items COMMA WIRE ID .)


state 37

    (1) module_definition -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE .

    $end            reduce using rule 1 (module_definition -> MODULE ID LPAREN port_list RPAREN SEMICOLON module_items ENDMODULE .)


state 38

    (8) module_items -> module_items module_item .

    ENDMODULE       reduce using rule 8 (module_items -> module_items module_item .)
    INPUT           reduce using rule 8 (module_items -> module_items module_item .)
    OUTPUT          reduce using rule 8 (module_items -> module_items module_item .)
    WIRE            reduce using rule 8 (module_items -> module_items module_item .)
    ASSIGN          reduce using rule 8 (module_items -> module_items module_item .)
    AND             reduce using rule 8 (module_items -> module_items module_item .)
    OR              reduce using rule 8 (module_items -> module_items module_item .)
    NOT             reduce using rule 8 (module_items -> module_items module_item .)
    NAND            reduce using rule 8 (module_items -> module_items module_item .)
    NOR             reduce using rule 8 (module_items -> module_items module_item .)
    XOR             reduce using rule 8 (module_items -> module_items module_item .)
    XNOR            reduce using rule 8 (module_items -> module_items module_item .)
    BUF             reduce using rule 8 (module_items -> module_items module_item .)


state 39

    (15) input_declaration -> INPUT input_list . SEMICOLON
    (18) input_list -> input_list . COMMA ID

    SEMICOLON       shift and go to state 47
    COMMA           shift and go to state 48


state 40

    (16) input_declaration -> INPUT WIRE . input_list SEMICOLON
    (17) input_list -> . ID
    (18) input_list -> . input_list COMMA ID

    ID              shift and go to state 41

    input_list                     shift and go to state 49

state 41

    (17) input_list -> ID .

    SEMICOLON       reduce using rule 17 (input_list -> ID .)
    COMMA           reduce using rule 17 (input_list -> ID .)


state 42

    (20) wire_declaration -> WIRE wire_list . SEMICOLON
    (22) wire_list -> wire_list . COMMA ID

    SEMICOLON       shift and go to state 50
    COMMA           shift and go to state 51


state 43

    (21) wire_list -> ID .

    SEMICOLON       reduce using rule 21 (wire_list -> ID .)
    COMMA           reduce using rule 21 (wire_list -> ID .)


state 44

    (19) output_declaration -> OUTPUT ID . SEMICOLON

    SEMICOLON       shift and go to state 52


state 45

    (23) assign_statement -> ASSIGN ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 53


state 46

    (36) gate_instantiation -> gate_type ID . LPAREN signal_list RPAREN SEMICOLON

    LPAREN          shift and go to state 54


state 47

    (15) input_declaration -> INPUT input_list SEMICOLON .

    ENDMODULE       reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    INPUT           reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    OUTPUT          reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    WIRE            reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    ASSIGN          reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    AND             reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    OR              reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    NOT             reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    NAND            reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    NOR             reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    XOR             reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    XNOR            reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)
    BUF             reduce using rule 15 (input_declaration -> INPUT input_list SEMICOLON .)


state 48

    (18) input_list -> input_list COMMA . ID

    ID              shift and go to state 55


state 49

    (16) input_declaration -> INPUT WIRE input_list . SEMICOLON
    (18) input_list -> input_list . COMMA ID

    SEMICOLON       shift and go to state 56
    COMMA           shift and go to state 48


state 50

    (20) wire_declaration -> WIRE wire_list SEMICOLON .

    ENDMODULE       reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    INPUT           reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    OUTPUT          reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    WIRE            reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    ASSIGN          reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    AND             reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    OR              reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    NOT             reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    NAND            reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    NOR             reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    XOR             reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    XNOR            reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)
    BUF             reduce using rule 20 (wire_declaration -> WIRE wire_list SEMICOLON .)


state 51

    (22) wire_list -> wire_list COMMA . ID

    ID              shift and go to state 57


state 52

    (19) output_declaration -> OUTPUT ID SEMICOLON .

    ENDMODULE       reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    INPUT           reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    OUTPUT          reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    WIRE            reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    ASSIGN          reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    AND             reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    OR              reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    NOT             reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    NAND            reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    NOR             reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    XOR             reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    XNOR            reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)
    BUF             reduce using rule 19 (output_declaration -> OUTPUT ID SEMICOLON .)


state 53
